--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+**/.actual-bot-dbs/**
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
